# pytorch-combinators

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: Demo_ResNet34.py  NormalizingFlow.py  ResNet34.py  Transformer.py
src/torch_combinators/: __init__.py
src/torch_combinators.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/torch_combinators/combinators/: __init__.py
src/torch_combinators/evolving_combinators/: __init__.py
