[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"    

[project]
name = "torch_combinators"
version = "0.1.0"
description = "A library of combinators for PyTorch"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.6.0"                         
]